--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 
 }
+/*===================view 1 hadding part=================*/
 .top__heading{
       
     width: 80vw;
@@ -100,6 +101,77 @@ body{
       }
     }
   }
+  /*==================addPart====================*/
+
+  .buttonPart{
+      
+    width: 80vw;
+    background-color: rgb(46, 90, 101) ;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between ;
+   
+    padding: 20px;
+    border-radius: 15px;
+    height: 70px;
+    margin-top: 4%;
+    #exercise{
+
+       width: 20%;
+       background-color: #b0d5e4;
+       font-size: x-large;
+       height: px;
+      border-radius: 10px ;
+
+    }
+    .timeIn{ cursor: pointer;
+    border-radius: 10px;
+    width: 180px;
+    background-color: rgb(137, 170, 172);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: black;
+    font-size: x-large;
+    font: bold;
+    #h,#m,#s{
+        border-radius: 10px;
+        width: 50px;
+        background-color: rgb(222, 239, 240);
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        color: black;
+        font-size: large;
+        font: bold;
+    }
+
+ }
+
+ /*===========add button=====================>*/
+
+ #add ,i {
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #ffffff;
+    background-color: #96c6d8;
+    transition: all 0.5s ease;
+    cursor: pointer;
+    font-size: xx-large;
+
+ }
+
+
+
+}
+
+
+     
 
 
 
