--- a/style.css
+++ b/style.css
@@ -8,18 +8,28 @@
 body{
     
     background-color: rgb(12, 59, 72);
-    height: 100vh;
+    max-height: 1600px;
+    
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     color: azure;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-
+    
 }
+
+
 /*===================view 1 hadding part=================*/
-.top__heading{
-      
+#view1{
+    margin-top: 2%;
+    display: flex;
+    flex-direction: column;
+}
+#top__heading{
+   
+    margin-top: 10%;
     width: 80vw;
     background-color: rgb(46, 90, 101) ;
     display: flex;
@@ -48,8 +58,6 @@ body{
         font: bold;
         i{
             color: #16475b;
-            
-            
         }
     }
     button:hover{
@@ -114,17 +122,20 @@ body{
     padding: 20px;
     border-radius: 15px;
     
-    margin-top: 4%;
+    margin-top: 2%;
     #exercise{
 
        width: 30%;
        background-color: #b0d5e4;
        font-size: x-large;
-       height: px;
+       padding-left: 3%;
+
       border-radius: 10px ;
 
+
     }
-    .timeIn{ cursor: pointer;
+    .timeIn{ 
+        cursor: pointer;
     border-radius: 10px;
     width: 180px;
     background-color: rgb(137, 170, 172);
@@ -137,7 +148,7 @@ body{
     #h,#m,#s{
         border-radius: 10px;
         width: 50px;
-        background-color: rgb(222, 239, 240);
+        background-color: #b0d5e4;
         display: flex;
         justify-content: space-around;
         align-items: center;
@@ -170,6 +181,20 @@ body{
 
 
 }
+/*==========display=============*/
+#display div{
+    flex-direction: row; 
+    justify-content: space-between;
+    
+    padding: 1em;
+  
+    display: flex;
+    flex-direction: column;
+    background-color:  rgb(46, 90, 101);
+    border-radius: 10px;
+    margin: 1em;
+
+}
 
 
      
@@ -181,6 +206,7 @@ body{
         flex-direction: column;
         align-items: center;
         align-content: space-around;
+        padding: 10px;
       #exercise{
         width: 80%;
       }
@@ -196,14 +222,17 @@ body{
 
 
 /*=========================timer=========================*/
-.container{
+#container{
      width: 80%;
      max-width: 600px;
      margin: 0 auto;
      background-color: rgb(46, 90, 101);
      border-radius: 10px;
      padding: 20px;
-     display: none;
+     margin-top: 2%;
+     display: block;
+     
+
 
 }
 h1{
@@ -250,3 +279,5 @@ h2{
     transition: width 1s ease-in-out;
     border-radius: 5px;
 }
+
+
