--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
 }
 #top__heading{
    
-    margin-top: 10%;
+    margin-top: 12%;
     width: 80vw;
     background-color: rgb(46, 90, 101) ;
     display: flex;
@@ -64,6 +64,10 @@ body{
         background-color:  rgb(63, 99, 102) ;
         color: rgb(28, 31, 32);
         border: black,solid,2px;
+        i{
+            color: #16475b;
+            background-color: #4c7a8a;
+        }
     }
     
 
@@ -139,13 +143,14 @@ body{
         cursor: pointer;
     border-radius: 10px;
     width: 180px;
-    background-color: rgb(137, 170, 172);
+    background-color: rgb(120, 165, 168);
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: black;
-    font-size: x-large;
+    font-size: xx-large;
     font: bold;
+    
     #h,#m,#s{
         border-radius: 10px;
         width: 50px;
@@ -210,7 +215,19 @@ body{
         padding: 10px;
       #exercise{
         width: 80%;
+        
       }
+      input{
+        margin: 5%;
+      } 
+      .timeIn{
+        width:80% ;
+        padding: 0;
+        #h,#m,#s{
+            width: 20%;
+            font-size: medium;
+        }
+      }     
      
       
     }
@@ -403,15 +420,16 @@ h2{
     text-align: center;
 }
 .wholeTable,.wholeTable tr{
-    border: 2px solid black;
+    border: 4px solid black;
 }
 .wholeTable{
     height: clamp(7rem,30vw,13rem);
     width:70vw;
     margin-bottom: 5em;
+    font-size: large;
 }
 .wholeTable td {
-    border: 1px solid black;
+    border: 4px solid rgb(7, 23, 29);
     padding: 10px; 
     text-align: left; 
 }
