--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body{
             background-color: transparent;
         }
     }
-    button:hover{
+    button:active{
         
         color: rgb(105, 138, 147);
         background-color: #324c56;
@@ -70,6 +70,7 @@ body{
             background-color: transparent
         }
     }
+    
     
 
 
