--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ body{
     font-size: xx-large;
     font: bold;
     
+    
     #h,#m,#s{
         border-radius: 10px;
         width: 50px;
@@ -163,6 +164,7 @@ body{
         color: black;
         font-size: large;
         font: bold;
+        padding-left: 2px;
     }
 
  }
@@ -231,6 +233,7 @@ body{
         #h,#m,#s{
             width: 20%;
             font-size: medium;
+            
         }
       }
       #add{
